# CH573-CMake

./: CMakeLists.txt  LICENSE  Readme.md
CH573/: CMakeLists.txt
CH573/StdPeriphDriver/: CH57x_clk.c  CH57x_spi0.c  CH57x_sys.c  CH57x_usbhostClass.c
CH573/StdPeriphDriver/inc/: CH573SFR.h  CH57x_flash.h  CH57x_sys.h  ISP573.h
scripts/: conv.sh
src/: main.c
